--- a/map.css
+++ b/map.css
@@ -107,3 +107,14 @@ body {
     color: #333;
     text-align: center;
 }
+
+#polygon-button {
+    height: 40px;
+    width: 100px;
+    background-color: white;
+    cursor: pointer;
+    font-size: 14px;
+    border: 2px solid #333;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
