--- a/map.css
+++ b/map.css
@@ -80,7 +80,7 @@ body {
     color: #c62828;
 }
 
-#filter {
+.filter {
     padding: 8px 12px;
     background-color: white;
     border: 2px solid #333;
